--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,4 +34,7 @@
   	<servlet-name>EditServlet</servlet-name>
   	<url-pattern>/EditServlet</url-pattern>
   </servlet-mapping>
+  <welcome-file-list>
+  	<welcome-file>allNotes.jsp</welcome-file>
+  </welcome-file-list>
 </web-app>
